# Radarprocess

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
examples/: sample_ir.json
src/radar_dag/: __init__.py  cli.py
src/radar_dag/ir/: __init__.py  linear.py
src/radar_dag/pipeline/: __init__.py  analyzer.py
src/radar_dag/utils/: __init__.py  logging.py
tests/: test_analyzer.py  test_cli.py
