[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-dag"
version = "0.1.0"
description = "CLI for analyzing linear radar IR descriptions"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
radar-dag = "radar_dag.cli:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["radar_dag*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
